Fix issue with center alignment of linked images

--- a/static/src/styles/blocks/_common.scss
+++ b/static/src/styles/blocks/_common.scss
@@ -50,6 +50,10 @@ $layouts: (6, 8, 10);
 .alignleft,
 .alignright {
   max-width: 100%;
+
+  a {
+    display: inline-block;
+  }
 }
 
 .aligncenter {
